--- a/posts/0.contents.md
+++ b/posts/0.contents.md
@@ -12,6 +12,8 @@
     + 大模型其他：[llm_others](https://www.daiwk.net/1.9.llm_others)
 + 推荐：[recommend](https://www.daiwk.net/2.recommend)
 + 大模型+推荐的一些个人总结：[llm_rec_summary](https://www.daiwk.net/3.llm_rec_summary)
++ 大模型的学习笔记：[llm_note](https://www.daiwk.net/4.llm_note)
++ 大模型agentic：[llm_agentic](https://www.daiwk.net/5.llm_agentic)
 + 机器学习面试汇总：[int-ml](https://www.daiwk.net/8.int-ml)
 + 之前的一些总结：[collections](https://www.daiwk.net/9.collections)
 
