--- a/posts/1.1.pre_llm.md
+++ b/posts/1.1.pre_llm.md
@@ -237,6 +237,8 @@ GPU的显存分成两部分：
 + H2D：host to device，从cpu拷贝到gpu
 + D2H：device to host，从gpu拷贝到cpu
 
+320GB/s（MLU580） vs 64GB/s（L20）
+
 ### 一些注意点
 
 
