--- a/posts/00.bitter_lesson.md
+++ b/posts/00.bitter_lesson.md
@@ -6,9 +6,9 @@ http://www.incompleteideas.net/IncIdeas/BitterLesson.html
 
 在计算机象棋领域，1997年击败世界冠军卡斯帕罗夫的方法正是基于大规模深度搜索。当时，大多数致力于利用人类对象棋特殊结构理解的计算机象棋研究人员对此感到沮丧。当一种更简单的、基于搜索的方法，结合特殊的硬件和软件，被证明更为有效时，这些基于人类知识的象棋研究人员便不再是输不起的人了。他们表示，“蛮力”搜索或许这次赢了，但它并非通用策略，而且无论如何，这也不是人类下象棋的方式。这些研究人员希望基于人类输入的方法能够获胜，但最终却未能如愿，他们为此感到失望。
 
-计算机围棋的研究也呈现出类似的模式，只是晚了20年。最初，人们投入了巨大的努力，试图利用人类的知识或围棋本身的特性来规避搜索，但一旦搜索被大规模有效地应用，所有这些努力都被证明是无用的，甚至更糟。同样重要的是利用自我对弈学习来学习价值函数（就像在许多其他游戏甚至国际象棋中一样，尽管在1997年首次击败世界冠军的程序中，学习并没有发挥重要作用）。自我对弈学习以及一般的学习，就像搜索一样，能够运用大规模计算。搜索和学习是人工智能研究中利用大规模计算的两大最重要的技术。在计算机围棋中，就像在计算机国际象棋中一样，研究人员最初的努力是利用人类的理解力（这样就需要更少的搜索），直到很久以后，通过拥抱搜索和学习才取得了更大的成功。在语音识别领域，早
+计算机围棋的研究也呈现出类似的模式，只是晚了20年。最初，人们投入了巨大的努力，试图利用人类的知识或围棋本身的特性来规避搜索，但一旦搜索被大规模有效地应用，所有这些努力都被证明是无用的，甚至更糟。同样重要的是利用自我对弈学习来学习价值函数（就像在许多其他游戏甚至国际象棋中一样，尽管在1997年首次击败世界冠军的程序中，学习并没有发挥重要作用）。自我对弈学习以及一般的学习，就像搜索一样，能够运用大规模计算。搜索和学习是人工智能研究中利用大规模计算的两大最重要的技术。在计算机围棋中，就像在计算机国际象棋中一样，研究人员最初的努力是利用人类的理解力（这样就需要更少的搜索），直到很久以后，通过拥抱搜索和学习才取得了更大的成功。
 
-在20世纪70年代就有一个由美国国防部高级研究计划局（DARPA）赞助的早期竞赛。参赛方法包括一系列利用人类知识（例如词汇、音素、人类声道等知识）的特殊方法。另一方面，还有一些基于隐马尔可夫模型 (HMM) 的新方法，它们本质上更具统计性，计算量更大。统计方法再次胜过基于人类知识的方法。这导致了整个自然语言处理领域的重大变革，几十年来，统计和计算逐渐占据了主导地位。语音识别领域深度学习的兴起正是朝着这一方向迈出的最新一步。深度学习方法对人类知识的依赖程度更低，使用更多的计算，并结合在海量训练集上进行学习，从而显著提升了语音识别系统的性能。就像在游戏中一样，研究人员总是试图构建出符合他们自身思维方式的系统——他们试图将这些知识融入到自己的系统中——但最终却适得其反，浪费了研究人员大量的时间。而随着摩尔定律的出现，大规模计算成为可能，人们也找到了充分利用计算资源的方法。
+在语音识别领域，早在20世纪70年代就有一个由美国国防部高级研究计划局（DARPA）赞助的早期竞赛。参赛方法包括一系列利用人类知识（例如词汇、音素、人类声道等知识）的特殊方法。另一方面，还有一些基于隐马尔可夫模型 (HMM) 的新方法，它们本质上更具统计性，计算量更大。统计方法再次胜过基于人类知识的方法。这导致了整个自然语言处理领域的重大变革，几十年来，统计和计算逐渐占据了主导地位。语音识别领域深度学习的兴起正是朝着这一方向迈出的最新一步。深度学习方法对人类知识的依赖程度更低，使用更多的计算，并结合在海量训练集上进行学习，从而显著提升了语音识别系统的性能。就像在游戏中一样，研究人员总是试图构建出符合他们自身思维方式的系统——他们试图将这些知识融入到自己的系统中——但最终却适得其反，浪费了研究人员大量的时间。而随着摩尔定律的出现，大规模计算成为可能，人们也找到了充分利用计算资源的方法。
 
 在计算机视觉领域，也存在类似的模式。早期的方法将视觉理解为搜索边缘、广义圆柱体或 SIFT 特征。但如今，所有这些都已被摒弃。现代深度学习神经网络仅使用卷积和某些类型的不变性概念，但性能却显著提升。
 
