--- a/posts/1.6.llm_multimodal.md
+++ b/posts/1.6.llm_multimodal.md
@@ -205,6 +205,9 @@ claude-2-100k的回答。。
 + SAM2：[刚刚，Meta开源「分割一切」2.0模型，视频也能分割了](https://mp.weixin.qq.com/s?__biz=MzA3MzI4MjgzMw==&mid=2650928134&idx=1&sn=7855c453083236c5c5d121d3b4fb955e&scene=21)，[SAM 2: Segment Anything in Images and Videos](https://arxiv.org/abs/2408.00714)
 + SAM3：[ICLR 2026惊现SAM 3，分割一切的下一步：让模型理解「概念」](https://mp.weixin.qq.com/s/7uDHXQd1ES2mV4dZFB7VMw)，[SAM 3: Segment Anything with Concepts](https://openreview.net/pdf?id=r35clVtGzw)
 
+可以看这个demo，[https://github.com/facebookresearch/segment-anything/blob/main/notebooks/predictor_example.ipynb](https://github.com/facebookresearch/segment-anything/blob/main/notebooks/predictor_example.ipynb)，输入的可以是一个或者多个点（以及每个点是0还是1，即是否mask），也可以是一个或者多个box。例如输入的点在车窗里，那输出的mask就是当前这个车窗（置信度最高），多个车窗（置信度次之）、整辆车（置信度更低）；例如输入两个点，一个在车窗里（label是1），一个是车门(label是0)，那输出的mask就是整个车窗，没有车门。
+
+
 ## RAE
 
 [VAE时代终结？谢赛宁团队「RAE」登场，表征自编码器或成DiT训练新基石](https://mp.weixin.qq.com/s/Z1ZJnco6oEXWMUdbrito9w)
