--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1129,7 +1129,7 @@ $$
 [https://zhuanlan.zhihu.com/p/699985083](https://zhuanlan.zhihu.com/p/699985083)
 
 
-## 快手的OneRec（听说比较扯淡）
+## 快手的OneRec（非常扯淡）
 
 [OneRec: Unifying Retrieve and Rank with Generative Recommender and Preference Alignment](https://arxiv.org/pdf/2502.18965)
 
