--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -940,6 +940,18 @@ $$
 后面两种方法得到的id有多个，需要把他们对应的emb sumpooling，得到当前id的emb。对比发现prefix-ngram的效果最好
 
 
+## Meta的VISTA
+
+[Massive Memorization with Hundreds of Trillions of Parameters for Sequential Transducer Generative Recommenders](https://www.arxiv.org/abs/2510.22049)
+
+![](../assets/vista-1.png)
+
+![](../assets/vista-2.png)
+
+![](../assets/vista-3.png)
+
+![](../assets/vista-4.png)
+
 ## 美团的NLGR
 
 生成式重排
