--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -948,9 +948,17 @@ $$
 
 ![](../assets/vista-2.png)
 
+1. foundation model训练：100k的序列和100的seed序列(learnable的)一起通过一个quasi-linear attn进行训练，并把seed序列的输出存到kv cache里去
+2. 下游模型在训练和infer：直接从kv cache取出来，然后和候选item去算target attn。
+
 ![](../assets/vista-3.png)
 
+1. quasi-linear attn就是先算kv，再去和q搞一下
+2. 加了一个生成式的重建loss，让seed序列的表示能力增强，即假设现在是第i个历史序列，那输入完整的长度为k的seed序列，再输入0到i-1个token，经过causal attn后只对0到i-1那几个的输出去预估next item，让seed序列在softmax attn下有预估next item的能力
+
 ![](../assets/vista-4.png)
+
+看着是跨地域的同步
 
 ## 美团的NLGR
 
