--- a/posts/1.3.llm_archs.md
+++ b/posts/1.3.llm_archs.md
@@ -644,6 +644,13 @@ Google的大规模稀疏模型设计
 
 [DiPaCo: Distributed Path Composition](https://arxiv.org/pdf/2403.10616)
 
+## ByteRobust
+
+[豆包是如何炼成的？字节放出自研万卡训练系统ByteRobust论文](https://mp.weixin.qq.com/s/-KDhk_R4nj3C-uPG11VoYQ)
+
+[Robust LLM Training Infrastructure at ByteDance](https://arxiv.org/abs/2509.16293)
+
+
 
 # 推理框架
 
