--- a/posts/1.6.llm_multimodal.md
+++ b/posts/1.6.llm_multimodal.md
@@ -1,5 +1,11 @@
 # 多模态（基础）
 
+## 扩散模型总结
+
+[近500页史上最全扩散模型修炼宝典，宋飏等人一书覆盖三大主流视角](https://mp.weixin.qq.com/s/tBVkAK3TvlEBplpCYRtz1A)
+
+[The Principles of Diffusion Models: From Origins to Advances](https://arxiv.org/pdf/2510.21890)
+
 ## VLM导论
 
 [视觉语言模型导论：这篇论文能成为你进军VLM的第一步](https://mp.weixin.qq.com/s/gdT0q5HJ9Fw5QrbBihI1vA)
