--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1060,6 +1060,14 @@ seq2->seq1->target3->rt2->target2->rt1->target1
     + RL：基于RM，计算整个list的奖励，看着有点像vcg的东西
     + 优化Payment network：引入拉格朗日乘子进行优化
 
+## 美团的HoMer
+
+[推荐算法(2025.10.25)：美团堆更多特征、堆更多上下文，2%效果](https://mp.weixin.qq.com/s/c5Fx867rNsZxgsNBhRu-kg)
+
+[HoMer: Addressing Heterogeneities by Modeling Sequential and Set-wise Contexts for CTR Prediction]()
+
+
+
 ## 阿里的HeteroRec
 
 [Hierarchical Causal Transformer with Heterogeneous Information for Expandable Sequential Recommendation](https://arxiv.org/pdf/2503.01469)
@@ -4043,7 +4051,11 @@ $$
 
 [DimeRec: A Unified Framework for Enhanced Sequential Recommendation via Generative Diffusion Models](https://arxiv.org/pdf/2408.12153)
 
+## 快手的EMER
 
+[扔掉人工公式：快手EMER框架，用“会比较、自进化”的模型重构短视频推荐排序](https://mp.weixin.qq.com/s/4FQFrJxpCUvofzHotHUoqw)
+
+[An End-to-End Multi-objective Ensemble Ranking Framework for Video Recommendation](https://arxiv.org/pdf/2508.05093)
 
 ## 字节的LMN
 
