--- a/posts/5.llm_agentic.md
+++ b/posts/5.llm_agentic.md
@@ -559,6 +559,24 @@ DGM利用达尔文进化等开放式算法的原理，逐步构建起一个**不
 
 [Agent Learning via Early Experience](https://arxiv.org/abs/2510.08558)
 
+## Agentic Retrieval
+
+[长上下文窗口、Agent崛起，RAG已死？](https://mp.weixin.qq.com/s/TMhJ5lYdEo8beBnnRch3Jw)
+
+[RAG is dead, long live agentic retrieval](https://www.llamaindex.ai/blog/rag-is-dead-long-live-agentic-retrieval)
+
+## VISTA
+
+[VISTA: A Test-Time Self-Improving Video Generation Agent](https://arxiv.org/pdf/2510.15831)
+
+实际上重写了自己的提示,使每一代都比上一代更好。无需再训练,无需微调,只需纯粹的测试时自我反思。
+
+1. 将您的想法变成完整的场景故事板
+2. 生成多个视频候选
+3. 举办比赛,选出最佳选手
+4. 然后从视觉、听觉和语境上自我批评,然后再尝试每个循环=更清晰的视觉效果、更紧凑的故事叙述、更协调的动作。
+
+
 # deep research
 
 ## local-deep-research
