--- a/posts/3.llm_rec_summary.md
+++ b/posts/3.llm_rec_summary.md
@@ -63,6 +63,16 @@
     + 工具调用与RAG能力
     + 全模态的生成与沉浸式推荐
 
+
+常用的推荐链路指标：
+
++ 占比/独占比：召回、粗排、精排、推出
++ 各阶段分：召回分、粗排分、精排分、融合分
++ 各阶段序的对齐程度：召回序、粗排序、精排序、融合序
++ 通过率：粗排通过率（进精排数/进粗排数）、精排通过率（进混排数/进精排数）
++ Hit rate：当前召回序的topk在粗排序topk的占比、当前粗排序的topk在精排序topk的占比、召回N条有多少条在精排的topk里（目前看板用的是这个口径）...
+
+
 # 引入大模型的模型结构
 
 ## transformer结构的变种
