--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -966,7 +966,7 @@ $$
 
 [NLGR: Utilizing Neighbor Lists for Generative Rerank in Personalized Recommendation Systems](https://arxiv.org/pdf/2502.06097)
 
-将邻居候选列表引入生成式reranking框架，结合evaluator‑generator策略和非自回归采样机制，使reranker可跳跃组合优化。
+将邻居候选列表引入生成式reranking框架，结合evaluator-generator策略和非自回归采样机制，使reranker可跳跃组合优化。
 
 
 ## 美团的SessionRec
@@ -1181,7 +1181,7 @@ $$
 
 ## 字节的Next-User Retrieval
 
-[Next‑User Retrieval: Enhancing Cold‑Start Recommendations via Generative Approach](https://arxiv.org/pdf/2506.15267)
+[Next-User Retrieval: Enhancing Cold-Start Recommendations via Generative Approach](https://arxiv.org/pdf/2506.15267)
 
 
 ## 字节的RankMixer
@@ -1386,7 +1386,7 @@ infer：
 ## 美团的DFGR
 
 
-[Action is All You Need: Dual‑Flow Generative Ranking Network for Recommendation](https://arxiv.org/pdf/2505.16752)
+[Action is All You Need: Dual-Flow Generative Ranking Network for Recommendation](https://arxiv.org/pdf/2505.16752)
 
 ## 华为的UniGRF
 
@@ -2220,7 +2220,7 @@ $$
 
 ## 美团的PIGEON
 
-[Open‑Set Living Need Prediction with LLMs](https://arxiv.org/pdf/2506.02713)
+[Open-Set Living Need Prediction with LLMs](https://arxiv.org/pdf/2506.02713)
 
 将“生活需求预测”定义为 “开放集分类” 问题，提出PIGEON系统结合行为检索器与Maslow需求等级对用户意图进行文本生成预测。
 
@@ -3839,7 +3839,7 @@ BlockRank通过以下方式改进LLM的注意力操作：
 
 ## 美团的IterQR
 
-[IterQR: LLM‑based Iterative Query Rewrite for E‑commerce Search](https://arxiv.org/pdf/2504.05309)
+[IterQR: LLM-based Iterative Query Rewrite for E-commerce Search](https://arxiv.org/pdf/2504.05309)
 
 ## 阿里搜索广告
 
