--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1121,6 +1121,8 @@ item有各种特征，如title、img、id等
 
 [TBGRecall: A Generative Retrieval Model for E-commerce Recommendation Scenarios](https://arxiv.org/pdf/2508.11977)
 
+引入了下一会话预测（Next Session Prediction, NSP），将会话和物品进行分区，并采用多会话预测（MSP）和令牌专用网络（TSN）等优化手段
+
 
 ## 阿里的REG4Rec
 
@@ -1169,7 +1171,12 @@ $$
 
 召回排序合为一体的生成式推荐——根据历史session序列，预测下一个session。
 
+
+## 快手的OneRec-V2
+
 [OneRec-V2 Technical Report](https://arxiv.org/pdf/2508.20900)
+
+发现v1里encoder很重，改了下，让decoder变得很重
 
 ## 快手的OneLoc
 
@@ -1703,6 +1710,14 @@ user/item都是正常的推荐模型，有id特征、序列特征等，tag塔就
 
 ![](../assets/choirrec-stage3.png)
 
+## 阿里的CoAST
+
+[Cognitive-Aligned Spatio-Temporal Large Language Models For Next Point-of-Interest Prediction](https://arxiv.org/pdf/2510.14702)
+
+![](../assets/coast.png)
+
+sid每级code book的每个code搞一个special token(代码应该是```tokenizer.add_tokens([...])```)，location也类似地搞一下，用CPT让LLM学到sid的知识，然后预测下一个sid
+
 ## 快手的LSVCR
 
 [Enhancing Sequential Recommender with Large Language Models for Joint Video and Comment Recommendation](https://arxiv.org/pdf/2403.13574) Recsys25
@@ -1924,6 +1939,10 @@ item侧也复用了类似的流程，把输入的(hist, item)改成(item, pos, n
 ## 快手的TrackRec
 
 [TrackRec: Iterative Alternating Feedback with Chain-of-Thought via Preference Alignment for Recommendation](https://arxiv.org/abs/2508.15388)
+
+## 快手的OneRec-Think
+
+[OneRec-Think: In-Text Reasoning for Generative Recommendation](https://arxiv.org/abs/2510.11639)
 
 
 ## 字节的HLLM-Creator
