--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -82,6 +82,7 @@ meta发的[LLM-Rec: Personalized Recommendation via Prompting Large Language Mod
 
 [Aligning Large Language Models with Recommendation Knowledge](https://arxiv.org/pdf/2404.00245.pdf)
 
+25.10综述：[A Survey on Generative Recommendation: Data, Model, and Tasks](https://arxiv.org/pdf/2510.27157)
 
 ## 综述
 
