--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -2238,11 +2238,54 @@ $$
 
 [NoteLLM-2: Multimodal Large Representation Models for Recommendation](https://arxiv.org/abs/2405.16789)
 
+## 小红书的HyMiRec
+
+[HyMiRec: A Hybrid Multi-interest Learning Framework for LLM-based Sequential Recommendation](https://arxiv.org/pdf/2510.13738)
+
+![](../assets/hymirec1.png)
+
+全序列量化后丢给一个轻量的推荐模型，产出兴趣向量，再把截断的短期行为和兴趣向量一起给LLM产出多兴趣的用户向量
+
+![](../assets/hymirec2.png)
+
++ content llm encoder：输入item的文本(title+content)，还有一个special token，最终special token的输出就当成item emb
++ 基于cos相似度的的残差码本：最终一个item就用3个int和3个float（图中的w）表示
+
+$$
+e_j^{i+1}=e_j^i-\frac{e_j^i \cdot c_{b_j}^i}{\left\|c_{b_j}^i\right\|^2} \cdot c_{b_j^i}^i, j \in[1, N]
+$$
+
+从图里可以看出，w是e在c上的投影，即w的长度是$$|e|*cos(e,c)=|e|*ec/(|e||c|)=ec/|c|$$，而要创造一个c方向上这么长的向量，需要和单位向量$$c/|c|$$相乘，所以就是$$ec/|c|^2*c$$
+
++ 训练2个recommender
+    + 轻量：输入历史序列的sid对应的emb，还有一些可学习的Q-coarse，经过一个浅层trans，输出Q对应的向量R-coarse
+    + LLM：输入Q-coarse、短期sid对应的emb加上一个indicator向量（让llm能识别出来）、Q-refine，输出Q对应的输出R-refine
++ DMIL(Disentangled Multi-Interest Learning Module)：R-refine和content encoder的special token的输出都会用这个模块来训练
+    + 输入的R有s个向量，将未来一个时间窗口内的item聚成s类，然后通过匈牙利算法最大化pairwise的cos相似度，再加个对比学习
+
+最终serving时加了一路召回，拿用户的K个兴趣分别召回，近线预估，每次输入用户最近10个行为，在冷启item/user上有收益
+
 ## 小红书的RED-Rec
 
 [Cross-Scenario Unified Modeling of User Interests at Billion Scale](https://arxiv.org/pdf/2510.14788)
 
 [「小红书」搜广推统一LLM｜CROSS-SCENARIO UNIFIED MODELING OF USER INTERESTS](https://zhuanlan.zhihu.com/p/1968666570755650938)
+
+![](../assets/red-rec1.png)
+
++ itemllm：
+    + 有图像和文本的输入，用LLaMA2-1.3B初始化llm部分，图像部分用CLIP ViT-B/16。
++ userllm：用Qwen2.5-1B，整体和HyMicRec里的LLM差不多
+    + 搜广推的序列按时间序merge到一起
+    + 序列里每个item加了action（点击、收藏、点赞等）的emb，hour(0~23)的emb
+    + 对merge后的序列加了序列的pos embed，时间gap的pos emb
+    + 同样有HyMicRec里的Q，这里用于建模跨场景的兴趣
+
+![](../assets/red-rec2.png)
+
+100w用户训练，1w用户测试，8卡H100训练，最终serving时加了一路召回，作用于全量用户，开了10%对10%的实验，看着独占比很高（90%+）
+
+![](../assets/red-rec-exp.png)
 
 
 ## 网易云音乐的LEMON
