--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -2259,7 +2259,7 @@ $$
 
 + 训练2个recommender
     + 轻量：输入历史序列的sid对应的emb，还有一些可学习的Q-coarse，经过一个浅层trans，输出Q对应的向量R-coarse
-    + LLM：输入Q-coarse、短期sid对应的emb加上一个indicator向量（让llm能识别出来）、Q-refine，输出Q对应的输出R-refine
+    + LLM：输入R-coarse、短期sid对应的emb加上一个indicator向量（让llm能识别出来）、Q-refine，输出Q对应的输出R-refine
 + DMIL(Disentangled Multi-Interest Learning Module)：R-refine和content encoder的special token的输出都会用这个模块来训练
     + 输入的R有s个向量，将未来一个时间窗口内的item聚成s类，然后通过匈牙利算法最大化pairwise的cos相似度，再加个对比学习
 
