--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -84,6 +84,8 @@ meta发的[LLM-Rec: Personalized Recommendation via Prompting Large Language Mod
 
 25.10综述：[A Survey on Generative Recommendation: Data, Model, and Tasks](https://arxiv.org/pdf/2510.27157)
 
+加reasoning的综述：[Towards Reasoning-Aware Recommender Systems: A Survey in the LLM Era](https://www.researchgate.net/publication/397223831_Towards_Reasoning-Aware_Recommender_Systems_A_Survey_in_the_LLM_Era)
+
 ## 综述
 
 ### 概况
@@ -1065,7 +1067,7 @@ seq2->seq1->target3->rt2->target2->rt1->target1
 
 [推荐算法(2025.10.25)：美团堆更多特征、堆更多上下文，2%效果](https://mp.weixin.qq.com/s/c5Fx867rNsZxgsNBhRu-kg)
 
-[HoMer: Addressing Heterogeneities by Modeling Sequential and Set-wise Contexts for CTR Prediction]()
+[HoMer: Addressing Heterogeneities by Modeling Sequential and Set-wise Contexts for CTR Prediction](https://arxiv.org/pdf/2510.11100)
 
 
 
