--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -2684,7 +2684,7 @@ $$
 
 
 
-# LLM+推荐：输入文本（学术界）
+# LLM+推荐：输入文本/ID（学术界）
 
 ## P5 RecSys22
 
@@ -3182,6 +3182,18 @@ guided embedding：prompt里包含m个aspect，让模型给出每个aspect的打
 + sid的学习：通过llama3.1-8b-instruct产出4096的emb，然后学一个rq-vae的sid，主要加了一个domain-aware的对比学习（2个item相同domain则拉近距离，反之拉远），所以loss=loss_reconstruct+loss_rq+loss_domain
 + 推荐模型的学习：一个正常的transformer-based模型(本文用的T5-small)，预测下一个sid
 + domain-specific的微调：每个domain加一个小矩阵，该domain的数据只用lora训对应的那个小矩阵
+
+## MiniOneRec
+
+[首个完整开源的生成式推荐框架MiniOneRec，轻量复现工业级OneRec！](https://mp.weixin.qq.com/s/lnoLU1fsubtzpefVcTniCA)
+
+[MiniOneRec: An Open-Source Framework for Scaling Generative Recommendation](https://arxiv.org/abs/2510.24431)
+
+[https://github.com/AkaliKong/MiniOneRec](https://github.com/AkaliKong/MiniOneRec)
+
+[https://huggingface.co/kkknight/MiniOneRec](https://huggingface.co/kkknight/MiniOneRec)
+
+
 
 
 # LLM+推荐：Foundation/蒸馏/其他
