--- a/posts/1.6.llm_multimodal.md
+++ b/posts/1.6.llm_multimodal.md
@@ -353,26 +353,6 @@ $$
 
 [Autoregressive Image Generation without Vector Quantization](https://arxiv.org/pdf/2406.11838v1)
 
-## Cambrian-1
-
-[寒武纪1号诞生：谢赛宁Yann LeCun团队发布最强开源多模态LLM](https://mp.weixin.qq.com/s/NFiorsNZLzVT1YXeLgNZPw)
-
-[Cambrian-1: A Fully Open, Vision-Centric Exploration of Multimodal LLMs](https://arxiv.org/pdf/2406.16860)
-
-[https://github.com/cambrian-mllm/cambrian](https://github.com/cambrian-mllm/cambrian)
-
-[https://huggingface.co/nyu-visionx/](https://huggingface.co/nyu-visionx/)
-
-[https://huggingface.co/datasets/nyu-visionx/CV-Bench](https://huggingface.co/datasets/nyu-visionx/CV-Bench)
-
-[https://github.com/cambrian-mllm/cambrian](https://github.com/cambrian-mllm/cambrian)
-
-当前多模态学习研究的两个潜在问题：
-
-+ 过度且过早地依赖语言，这是一个捷径，能弥补学习有效视觉表征的不足之处
-+ 现有基准可能无法为真实世界场景提供足够的指导 —— 视觉定基对于稳健的多模态理解至关重要
-
-
 ## VCR
 
 [Bengio团队提出多模态新基准，直指Claude 3.5和GPT-4o弱点](https://mp.weixin.qq.com/s/Zy-kM3bvN-1oHondw1VLzw)
@@ -1307,3 +1287,35 @@ aligner看着是一个类似ffn的结构，即norm(mlp(gelu(mlp)))
 
 [LLM为什么能看懂图？秘密不在Projector，残差结构才是跨模态理解的关键](https://mp.weixin.qq.com/s/B4SSNI2-0_zYsM4cLimNLQ)
 
+## Cambrian-1
+
+[寒武纪1号诞生：谢赛宁Yann LeCun团队发布最强开源多模态LLM](https://mp.weixin.qq.com/s/NFiorsNZLzVT1YXeLgNZPw)
+
+[Cambrian-1: A Fully Open, Vision-Centric Exploration of Multimodal LLMs](https://arxiv.org/pdf/2406.16860)
+
+[https://github.com/cambrian-mllm/cambrian](https://github.com/cambrian-mllm/cambrian)
+
+[https://huggingface.co/nyu-visionx/](https://huggingface.co/nyu-visionx/)
+
+[https://huggingface.co/datasets/nyu-visionx/CV-Bench](https://huggingface.co/datasets/nyu-visionx/CV-Bench)
+
+[https://github.com/cambrian-mllm/cambrian](https://github.com/cambrian-mllm/cambrian)
+
+当前多模态学习研究的两个潜在问题：
+
++ 过度且过早地依赖语言，这是一个捷径，能弥补学习有效视觉表征的不足之处
++ 现有基准可能无法为真实世界场景提供足够的指导 —— 视觉定基对于稳健的多模态理解至关重要
+
+## Cambrian-S
+
+[Cambrian-S: Towards Spatial Supersensing in Video](https://arxiv.org/abs/2511.04670)
+
+![](../assets/cambrian-s-1.png)
+
+空间超感知(Spatial Supersensing)包括以下4步：
+
+1. 纯语言理解：	无感官能力，仅基于文本推理，早期MLLMs，当前模型仍有残留偏差
+2. 语义感知：将像素解析为物体、属性和关系（“看图说话”）	现有 MLLMs 具备较强能力
+3. 流式事件认知：处理无界实时流，整合记忆并主动响应部分研究探索，但非模型原生能力
+4. 隐式3D空间认知：理解视频为3D世界的投影，推理物体位置/关系，现有视频模型能力有限
+5. 预测性世界建模：基于先验预测latent世界状态，用“惊喜”引导注意力/记忆，当前多模态系统完全缺失
